@@ -213,6 +213,7 @@ n-i-bz  Fix assert in gdbserver for watchpoints watching the same address
 302536  Fix for the POWER Valgrind regression test: memcheck-ISA2.0.
 302656  Unhandled instruction (vcvtsi2ssq)
         == 273475 (canonical avx)
+302709  valgrind for ARM needs extra tls support for android emulator under Linux
 
 
 Release 3.7.0 (5 November 2011)
